# TQ_LLAMACPP_VSION_BENCH

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
bench/: README.md  download_unsloth_ggufs.py  preload_datasets.py  pyproject.toml  rescore_mmmu.py  run_all_phases.sh  run_bench.py  run_parity_smoke.py  run_vlm_n30.py  run_vlm_n30_patch.py  smoke_test.py  verify_datasets.py
bench/configs/: benchmarks.yaml  models.yaml  profiles.yaml  runtimes.yaml
bench/notebooks/: 00_colab_bench.ipynb  01_smoke_test.ipynb  02_full_run.ipynb  03_analysis.ipynb  04_kv_analysis.ipynb  05_kv_dump_analysis.ipynb
bench/tests/: conftest.py  test_chartqapro_official.py  test_colab_helpers.py  test_config_profiles.py  test_existing_evaluators.py  test_mathvista_official.py  test_mmmu_official.py  test_mmmu_official_raw.py  test_orchestrator_mixed_model.py  test_server_command.py  test_textvqa_official.py
bench/tests/fixtures/: chartqapro_golden.json  mathvista_golden.json  mmmu_golden.json  textvqa_golden.json
bench/tq_bench/: __init__.py  client.py  colab.py  config.py  env.py  kv_dump_runner.py  orchestrator.py  runner.py  server.py
bench/tq_bench/datasets/: __init__.py  base.py  text.py  vlm.py
bench/tq_bench/evaluators/: __init__.py  _utils.py  base.py  chartqapro_official.py  mathvista_official.py  mcq.py  mmmu_official.py  textvqa_official.py  vqa.py
bench/tq_bench/kv_analysis/: README.md  __init__.py  attention_analysis.py  codebook_analysis.py  distribution.py  layer_plots.py  loader.py  outliers.py  position_analysis.py  quant_error.py  report.py  rotation_analysis.py  (+1 more)
(+26 files in other folders)
